# NanoTTS-KO

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  PROVENANCE.md  README.md  setup.sh
.github/workflows/: ci.yml
cmake/: nanottsConfig.cmake.in
docs/: ACOUSTICS.md  ALTERNATE_RENDERERS.md  API.md  ARCHITECTURE.md  DECLICKING.md  FOOTPRINT.md  IMPLEMENTATION_REPORT.md  KOREAN_FRONTEND.md  NORMALIZATION.md  OUTPUTS.md  PORTING.md  PROSODY.md  QUALITY.md  TRANSITIONS.md  TRANSITION_EVALUATION.md  VALIDATION.md
examples/: nanotts_analysis.c  nanotts_lexicon.c  nanotts_mcu_callback.c  nanotts_mcu_pwm.c
include/nanotts/: nanotts.h  nanotts_pcm.h  nanotts_pwm.h
src/: nanotts.c  nanotts_internal.h  nanotts_ko.c  nanotts_ko_lexicon.c  nanotts_ko_morph.c  nanotts_ko_normalize.c  nanotts_ko_phonology.c  nanotts_ko_prosody.c  nanotts_ko_unicode.c  nanotts_synth.c  nanotts_voice.c
src/output/: nanotts_pcm.c  nanotts_pwm.c
tests/: test_api.c  test_declick.c  test_fuzz.c  test_korean.c  test_morphology.c  test_normalization.c  test_pcm.c  test_pronunciations.c  test_prosody.c  test_pwm.c  test_styles.c  test_synth.c  test_transitions.c
tests/data/: ko_pronunciations.tsv  ko_smoke.txt  ko_transitions.txt
tools/: check_corpus.py  nanotts_cli.c  pcm_to_wav.py  pwm_to_wav.py
